# starix

./: .gitignore  Cargo.toml  README.md  Starix.toml
.github/workflows/: main.yml
src/: config.rs  main.rs  token.rs  toml_reader.rs
