[package]
name = "starix"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.13"
webhook = "2.1.2"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-musl-gcc"
rustflags = ["-C", "link-arg=-Wl,-rpath,/usr/local/musl/lib"]